Colaboratory を使用して作成しました

--- a/ai_calc_learn.ipynb
+++ b/ai_calc_learn.ipynb
@@ -46,30 +46,50 @@
       "metadata": {
         "id": "9lZ4JKh1bgdQ",
         "colab_type": "code",
-        "outputId": "40d04d4a-a474-4bda-fccd-f2396d724dc5",
+        "outputId": "cfa316d3-043b-4876-cb31-470b860d8d2c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 122
+          "height": 202
         }
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 0,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=email%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdocs.test%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.photos.readonly%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fpeopleapi.readonly&response_type=code\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cmGFLorAFyzX",
+        "colab_type": "text"
+      },
+      "source": [
+        "コマンド\n",
+        "!ls など、!を頭につけると、コマンドが実行できる。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gQhzx3PXDSIz",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -79,37 +99,6 @@
       },
       "source": [
         ""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "jTx6tGY6WGx8",
-        "colab_type": "code",
-        "outputId": "3680de1f-1e67-4ea4-8c24-176f9026b9b6",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
-      },
-      "source": [
-        "import tensorflow as tf\n",
-        "tf.test.gpu_device_name()"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'/device:GPU:0'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 5
-        }
       ]
     },
     {
@@ -129,42 +118,52 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 374
+          "height": 54
         },
-        "outputId": "5e3de4d7-ca12-42c3-aa2b-a03e25fea989"
+        "outputId": "05e6d9b0-fca9-48cc-ea19-55b4c064b474"
       },
       "source": [
+        "import random\n",
+        "import csv\n",
         "import pdb\n",
-        "pdb.set_trace()\n",
+        "#pdb.set_trace()\n",
         "\n",
-        "f = random.random()"
+        "home_dir = \"drive/My Drive/Colab Notebooks/\"\n",
+        "data_file = home_dir + \"data.csv\"\n",
+        "\n",
+        "with open(data_file, 'w') as f:\n",
+        "  writer = csv.writer(f)\n",
+        "  writer.writerow(['ope', '1st', '2nd', 'ans'])\n",
+        "\n",
+        "  num = 0\n",
+        "  while num < 1000:\n",
+        "    val0 = random.randint(1, 4)\n",
+        "    val1 = random.randint(-10, 10)\n",
+        "    val2 = random.randint(-10, 10)\n",
+        "    \n",
+        "    if val0 == 1:\n",
+        "      val3 = val1 + val2\n",
+        "    elif val0 == 2:\n",
+        "      val3 = val1 - val2\n",
+        "    elif val0 == 3:\n",
+        "      val3 = val1 * val2\n",
+        "    elif val0 == 4:\n",
+        "      if val2 == 0:\n",
+        "        continue\n",
+        "      else:\n",
+        "        val3 = val1 / val2\n",
+        "        \n",
+        "    writer.writerow([val0, val1, val2, val3])\n",
+        "    num += 1\n",
+        "    \n",
+        "print(\"End\")\n"
       ],
-      "execution_count": 44,
+      "execution_count": 113,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--Return--\n",
-            "> <ipython-input-44-7837b9b26f41>(2)<module>()->None\n",
-            "-> pdb.set_trace()\n",
-            "(Pdb) h\n",
-            "\n",
-            "Documented commands (type help <topic>):\n",
-            "========================================\n",
-            "EOF    c          d        h         list      q        rv       undisplay\n",
-            "a      cl         debug    help      ll        quit     s        unt      \n",
-            "alias  clear      disable  ignore    longlist  r        source   until    \n",
-            "args   commands   display  interact  n         restart  step     up       \n",
-            "b      condition  down     j         next      return   tbreak   w        \n",
-            "break  cont       enable   jump      p         retval   u        whatis   \n",
-            "bt     continue   exit     l         pp        run      unalias  where    \n",
-            "\n",
-            "Miscellaneous help topics:\n",
-            "==========================\n",
-            "exec  pdb\n",
-            "\n",
-            "(Pdb) c\n",
-            "aaa\n"
+            "End\n"
           ],
           "name": "stdout"
         }
@@ -435,7 +434,10 @@
         "colab_type": "text"
       },
       "source": [
-        "deep learning で学習"
+        "deep learning で学習\n",
+        "* 出力の活性化関数は linearを使う\n",
+        "* 損失関数は 二乗誤差を使う。交差エントロピーは確率で使うのでダメ。\n",
+        "\n"
       ]
     },
     {
@@ -445,9 +447,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 68
+          "height": 107
         },
-        "outputId": "0e63b7bd-f9c5-4d97-e840-e20e66fe4f89"
+        "outputId": "d16e5227-698b-4a9c-f6e5-eb935722b8cc"
       },
       "source": [
         "from keras.models import Sequential\n",
@@ -472,13 +474,15 @@
         "\n",
         "# construct model\n",
         "model = Sequential()\n",
-        "model.add(Dense(100, activation='relu', input_dim=3))\n",
-        "model.add(Dense(100, activation='relu'))\n",
+        "model.add(Dense(1000, activation='relu', input_dim=3))\n",
+        "model.add(Dense(1000, activation='relu'))\n",
+        "model.add(Dense(1000, activation='relu'))\n",
         "model.add(Dense(1, activation='linear'))\n",
-        "plot_model(model, to_file='DL_Model.png')\n",
-        "model.compile(loss='mean_squared_error', optimizer='Nadam', metrics=['accuracy'])\n",
+        "pngFile = \"drive/My Drive/Colab Notebooks/DL_Model.png\"\n",
+        "plot_model(model, to_file=pngFile, show_shapes=True)\n",
+        "model.compile(loss='mean_squared_error', optimizer='Adam', metrics=['accuracy'])\n",
         "\n",
-        "model.fit(X_train, Y_train, epochs=100, batch_size=64, verbose=0)\n",
+        "model.fit(X_train, Y_train, epochs=5000, batch_size=64, verbose=0)\n",
         "score = model.evaluate(X_test, Y_test)\n",
         "print(\"loss=%f, acc=%f\" % (score[0], score[1]))\n",
         "\n",
@@ -493,13 +497,13 @@
         "with open(filename, mode='wb') as fp:\n",
         "  pickle.dump(model, fp)"
       ],
-      "execution_count": 39,
+      "execution_count": 118,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "3816/3816 [==============================] - 1s 234us/step\n",
-            "loss=0.000014, acc=1.000000\n",
+            "200/200 [==============================] - 2s 12ms/step\n",
+            "loss=0.260214, acc=0.775000\n",
             "drive/My Drive/Colab Notebooks/DL_model.pickle\n"
           ],
           "name": "stdout"
@@ -521,10 +525,10 @@
       "metadata": {
         "id": "l5ATamfzkI1y",
         "colab_type": "code",
-        "outputId": "21b5899c-f206-4b9a-8744-1dd355152ed7",
+        "outputId": "26e8b0ec-5d39-4581-c7b0-d05663c51fd2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 126
         }
       },
       "source": [
@@ -543,17 +547,33 @@
         "with open(filename, mode='rb') as fp:\n",
         "  model = pickle.load(fp)\n",
         "  \n",
-        "  # 加算\n",
-        "  ope, x, y = 1, 10, 200\n",
-        "  predected_answer = model.predict(np.array([[ope, x, y]]))\n",
-        "  print(\"{0} , {1}, {2} = {3}\".format(ope, x, y, int(predected_answer[0])))"
+        "# 加算\n",
+        "ope, x, y = 1, -5, 12\n",
+        "predected_answer = model.predict(np.array([[ope, x, y]]))\n",
+        "print(\"{0} , {1}, {2} = {3}\".format(ope, x, y, int(predected_answer[0])))\n",
+        "  \n",
+        "ope, x, y = 2, -5, 12\n",
+        "predected_answer = model.predict(np.array([[ope, x, y]]))\n",
+        "print(\"{0} , {1}, {2} = {3}\".format(ope, x, y, int(predected_answer[0])))\n",
+        "  \n",
+        "  \n",
+        "ope, x, y = 3, -5, 12\n",
+        "predected_answer = model.predict(np.array([[ope, x, y]]))\n",
+        "print(\"{0} , {1}, {2} = {3}\".format(ope, x, y, int(predected_answer[0])))\n",
+        "\n",
+        "ope, x, y = 4, -5, 12\n",
+        "predected_answer = model.predict(np.array([[ope, x, y]]))\n",
+        "print(\"{0} , {1}, {2} = {3}\".format(ope, x, y, int(predected_answer[0])))"
       ],
-      "execution_count": 43,
+      "execution_count": 121,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "1 , 10, 200 = 213\n"
+            "1 , -5, 12 = 7\n",
+            "2 , -5, 12 = -16\n",
+            "3 , -5, 12 = -59\n",
+            "4 , -5, 12 = 0\n"
           ],
           "name": "stdout"
         }
