--- a/ai_calc_learn.ipynb
+++ b/ai_calc_learn.ipynb
@@ -6,7 +6,10 @@
       "name": "ai_calc_learn.ipynb",
       "version": "0.3.2",
       "provenance": [],
-      "collapsed_sections": [],
+      "collapsed_sections": [
+        "LCeMlarhclUK",
+        "Af1MtjVWV4Vw"
+      ],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,17 +49,17 @@
       "metadata": {
         "id": "9lZ4JKh1bgdQ",
         "colab_type": "code",
-        "outputId": "cfa316d3-043b-4876-cb31-470b860d8d2c",
+        "outputId": "5b3a0ae5-7db8-4f05-8e9f-497a2fb77f21",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 202
+          "height": 75
         }
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 46,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -83,13 +86,25 @@
       "metadata": {
         "id": "gQhzx3PXDSIz",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "e3da6317-e2c8-4b52-e88c-aee3fd61b9ae",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 62
+        }
       },
       "source": [
-        ""
+        "!conda list\n"
       ],
       "execution_count": 0,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/bin/bash: conda: command not found\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -116,11 +131,7 @@
       "metadata": {
         "id": "JA7ouKHF2ZYq",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 54
-        },
-        "outputId": "05e6d9b0-fca9-48cc-ea19-55b4c064b474"
+        "colab": {}
       },
       "source": [
         "import random\n",
@@ -129,45 +140,73 @@
         "#pdb.set_trace()\n",
         "\n",
         "home_dir = \"drive/My Drive/Colab Notebooks/\"\n",
-        "data_file = home_dir + \"data.csv\"\n",
         "\n",
+        "# 加算データ\n",
+        "data_file = home_dir + \"addData.csv\"\n",
         "with open(data_file, 'w') as f:\n",
         "  writer = csv.writer(f)\n",
         "  writer.writerow(['ope', '1st', '2nd', 'ans'])\n",
         "\n",
         "  num = 0\n",
         "  while num < 1000:\n",
-        "    val0 = random.randint(1, 4)\n",
+        "    val0 = 1\n",
         "    val1 = random.randint(-10, 10)\n",
         "    val2 = random.randint(-10, 10)\n",
-        "    \n",
-        "    if val0 == 1:\n",
-        "      val3 = val1 + val2\n",
-        "    elif val0 == 2:\n",
-        "      val3 = val1 - val2\n",
-        "    elif val0 == 3:\n",
-        "      val3 = val1 * val2\n",
-        "    elif val0 == 4:\n",
-        "      if val2 == 0:\n",
-        "        continue\n",
-        "      else:\n",
-        "        val3 = val1 / val2\n",
-        "        \n",
+        "    val3 = val1 + val2\n",
         "    writer.writerow([val0, val1, val2, val3])\n",
         "    num += 1\n",
+        "\n",
+        "#減算データ   \n",
+        "data_file = home_dir + \"subData.csv\"\n",
+        "with open(data_file, 'w') as f:\n",
+        "  writer = csv.writer(f)\n",
+        "  writer.writerow(['ope', '1st', '2nd', 'ans'])\n",
         "    \n",
-        "print(\"End\")\n"
+        "  num = 0\n",
+        "  while num < 1000:\n",
+        "    val0 = 2\n",
+        "    val1 = random.randint(-10, 10)\n",
+        "    val2 = random.randint(-10, 10)\n",
+        "    val3 = val1 - val2\n",
+        "    writer.writerow([val0, val1, val2, val3])\n",
+        "    num += 1\n",
+        "\n",
+        "#乗算データ    \n",
+        "data_file = home_dir + \"mulData.csv\"\n",
+        "with open(data_file, 'w') as f:\n",
+        "  writer = csv.writer(f)\n",
+        "  writer.writerow(['ope', '1st', '2nd', 'ans'])\n",
+        "    \n",
+        "  num = 0\n",
+        "  while num < 1000:\n",
+        "    val0 = 3\n",
+        "    val1 = random.randint(-10, 10)\n",
+        "    val2 = random.randint(-10, 10)\n",
+        "    val3 = val1 * val2\n",
+        "    writer.writerow([val0, val1, val2, val3])\n",
+        "    num += 1\n",
+        "\n",
+        "\n",
+        "#除算データ\n",
+        "data_file = home_dir + \"devData.csv\"\n",
+        "with open(data_file, 'w') as f:\n",
+        "  writer = csv.writer(f)\n",
+        "  writer.writerow(['ope', '1st', '2nd', 'ans'])\n",
+        "    \n",
+        "  num = 0\n",
+        "  while num < 1000:\n",
+        "    val0 = 4\n",
+        "    val1 = random.randint(-10, 10)\n",
+        "    val2 = random.randint(-10, 10)\n",
+        "    if val2 == 0:\n",
+        "      continue\n",
+        "    else:\n",
+        "      val3 = round(val1 / val2, 1)\n",
+        "    writer.writerow([val0, val1, val2, val3])\n",
+        "    num += 1\n"
       ],
-      "execution_count": 113,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "End\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -176,7 +215,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# 勉強用コード\n",
+        "# 機械学習\n",
         "\n",
         "学習済みモデルを使用する。\n",
         "*   ph1: 加算する学習モデルを作成\n",
@@ -434,10 +473,16 @@
         "colab_type": "text"
       },
       "source": [
-        "deep learning で学習\n",
+        "# deep learning で学習\n",
+        "* ph1: 加算する学習モデルを作成\n",
+        "* ph2:四則演算する学習モデルを作成\n",
+        "\n",
+        "注意点\n",
         "* 出力の活性化関数は linearを使う\n",
         "* 損失関数は 二乗誤差を使う。交差エントロピーは確率で使うのでダメ。\n",
-        "\n"
+        "\n",
+        "四則演算を別々に学習\n",
+        "https://qiita.com/aidy91614/items/e90ee45fb82c1724d654\n"
       ]
     },
     {
@@ -445,11 +490,11 @@
       "metadata": {
         "id": "5qGJYHiwCpxU",
         "colab_type": "code",
+        "outputId": "5975ef5b-ab6a-47c4-d850-f4117a45626a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 107
-        },
-        "outputId": "d16e5227-698b-4a9c-f6e5-eb935722b8cc"
+          "height": 234
+        }
       },
       "source": [
         "from keras.models import Sequential\n",
@@ -460,51 +505,58 @@
         "import sys\n",
         "import os\n",
         "\n",
-        "# test file existence\n",
-        "testDataFile = \"drive/My Drive/Colab Notebooks/data.csv\"\n",
-        "if os.path.isfile(testDataFile) == False:\n",
-        "  print(\"file not found\")\n",
-        "  sys.exit()\n",
         "\n",
-        "# read file and split data\n",
-        "data = pd.read_csv(testDataFile, header=0)\n",
-        "X = data.loc[:, ['ope', '1st', '2nd']]\n",
-        "Y = data.loc[:, ['ans']]\n",
-        "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, train_size=0.8)\n",
+        "def leaning(testDataFile, init_epoch, end_epoch):\n",
+        "  # test file existence\n",
+        "  if os.path.isfile(testDataFile) == False:\n",
+        "    print(\"file not found\")\n",
+        "    sys.exit()\n",
         "\n",
+        "  # read file and split data\n",
+        "  data = pd.read_csv(testDataFile, header=0)\n",
+        "  X = data.loc[:, ['ope', '1st', '2nd']]\n",
+        "  Y = data.loc[:, ['ans']]\n",
+        "  X_train, X_test, Y_train, Y_test = train_test_split(X, Y, train_size=0.8)\n",
+        "\n",
+        "  model.fit(X_train, Y_train, initial_epoch=init_epoch, epochs=end_epoch, batch_size=64, verbose=0)\n",
+        "  score = model.evaluate(X_test, Y_test)\n",
+        "  print(\"loss=%f, acc=%f\" % (score[0], score[1]))\n",
+        "\n",
+        "  \n",
+        "home_dir =  \"drive/My Drive/Colab Notebooks/\"\n",
         "# construct model\n",
         "model = Sequential()\n",
-        "model.add(Dense(1000, activation='relu', input_dim=3))\n",
-        "model.add(Dense(1000, activation='relu'))\n",
-        "model.add(Dense(1000, activation='relu'))\n",
+        "model.add(Dense(100, activation='relu', input_dim=3))\n",
+        "model.add(Dense(100, activation='relu'))\n",
+        "model.add(Dense(100, activation='relu'))\n",
         "model.add(Dense(1, activation='linear'))\n",
-        "pngFile = \"drive/My Drive/Colab Notebooks/DL_Model.png\"\n",
-        "plot_model(model, to_file=pngFile, show_shapes=True)\n",
+        "plot_model(model, to_file=home_dir + \"DL_Model.png\", show_shapes=True)\n",
         "model.compile(loss='mean_squared_error', optimizer='Adam', metrics=['accuracy'])\n",
         "\n",
-        "model.fit(X_train, Y_train, epochs=5000, batch_size=64, verbose=0)\n",
-        "score = model.evaluate(X_test, Y_test)\n",
-        "print(\"loss=%f, acc=%f\" % (score[0], score[1]))\n",
-        "\n",
+        "leaning(home_dir + \"addData.csv\", 0, 500)\n",
+        "leaning(home_dir + \"subData.csv\", 500, 1000)\n",
+        "leaning(home_dir + \"mulData.csv\", 1000, 2000)\n",
+        "leaning(home_dir + \"devData.csv\", 2000, 4000)\n",
+        "  \n",
         "\n",
         "#save model\n",
         "import pickle\n",
-        "filename = \"drive/My Drive/Colab Notebooks/\"\n",
-        "filename += \"DL_model\"\n",
-        "filename += \".pickle\"\n",
-        "print(filename)\n",
-        "\n",
-        "with open(filename, mode='wb') as fp:\n",
+        "with open(home_dir + \"DL_model.pickle\", mode='wb') as fp:\n",
         "  pickle.dump(model, fp)"
       ],
-      "execution_count": 118,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "200/200 [==============================] - 2s 12ms/step\n",
-            "loss=0.260214, acc=0.775000\n",
-            "drive/My Drive/Colab Notebooks/DL_model.pickle\n"
+            "200/200 [==============================] - 0s 2ms/step\n",
+            "loss=0.000228, acc=1.000000\n",
+            "200/200 [==============================] - 0s 81us/step\n",
+            "loss=0.000416, acc=1.000000\n",
+            "200/200 [==============================] - 0s 78us/step\n",
+            "loss=0.035640, acc=0.985000\n",
+            "200/200 [==============================] - 0s 99us/step\n",
+            "loss=0.004995, acc=0.295000\n"
           ],
           "name": "stdout"
         }
@@ -525,10 +577,10 @@
       "metadata": {
         "id": "l5ATamfzkI1y",
         "colab_type": "code",
-        "outputId": "26e8b0ec-5d39-4581-c7b0-d05663c51fd2",
+        "outputId": "f3403fa2-b226-409f-a8ee-d0e6affb90b7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 126
+          "height": 146
         }
       },
       "source": [
@@ -565,14 +617,14 @@
         "predected_answer = model.predict(np.array([[ope, x, y]]))\n",
         "print(\"{0} , {1}, {2} = {3}\".format(ope, x, y, int(predected_answer[0])))"
       ],
-      "execution_count": 121,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "1 , -5, 12 = 7\n",
-            "2 , -5, 12 = -16\n",
-            "3 , -5, 12 = -59\n",
+            "1 , -5, 12 = 0\n",
+            "2 , -5, 12 = 0\n",
+            "3 , -5, 12 = 0\n",
             "4 , -5, 12 = 0\n"
           ],
           "name": "stdout"
