演算子毎にモデルを作成版

--- a/ai_calc_learn.ipynb
+++ b/ai_calc_learn.ipynb
@@ -8,6 +8,7 @@
       "provenance": [],
       "collapsed_sections": [
         "LCeMlarhclUK",
+        "A97vg8Tm2UeZ",
         "Af1MtjVWV4Vw"
       ],
       "include_colab_link": true
@@ -137,10 +138,15 @@
         "import random\n",
         "import csv\n",
         "import pdb\n",
+        "import os\n",
+        "import sys\n",
         "#pdb.set_trace()\n",
         "\n",
-        "home_dir = \"drive/My Drive/Colab Notebooks/\"\n",
-        "\n",
+        "home_dir = \"drive/My Drive/Colab Notebooks/data/\"\n",
+        "if os.path.isdir(home_dir) == False:\n",
+        "  print(\"file not found:\" + home_dir)\n",
+        "  sys.exit()\n",
+        "    \n",
         "# 加算データ\n",
         "data_file = home_dir + \"addData.csv\"\n",
         "with open(data_file, 'w') as f:\n",
@@ -150,8 +156,8 @@
         "  num = 0\n",
         "  while num < 1000:\n",
         "    val0 = 1\n",
-        "    val1 = random.randint(-10, 10)\n",
-        "    val2 = random.randint(-10, 10)\n",
+        "    val1 = random.randint(-100, 100)\n",
+        "    val2 = random.randint(-100, 100)\n",
         "    val3 = val1 + val2\n",
         "    writer.writerow([val0, val1, val2, val3])\n",
         "    num += 1\n",
@@ -165,8 +171,8 @@
         "  num = 0\n",
         "  while num < 1000:\n",
         "    val0 = 2\n",
-        "    val1 = random.randint(-10, 10)\n",
-        "    val2 = random.randint(-10, 10)\n",
+        "    val1 = random.randint(-100, 100)\n",
+        "    val2 = random.randint(-100, 100)\n",
         "    val3 = val1 - val2\n",
         "    writer.writerow([val0, val1, val2, val3])\n",
         "    num += 1\n",
@@ -180,8 +186,8 @@
         "  num = 0\n",
         "  while num < 1000:\n",
         "    val0 = 3\n",
-        "    val1 = random.randint(-10, 10)\n",
-        "    val2 = random.randint(-10, 10)\n",
+        "    val1 = random.randint(-100, 100)\n",
+        "    val2 = random.randint(-100, 100)\n",
         "    val3 = val1 * val2\n",
         "    writer.writerow([val0, val1, val2, val3])\n",
         "    num += 1\n",
@@ -196,8 +202,8 @@
         "  num = 0\n",
         "  while num < 1000:\n",
         "    val0 = 4\n",
-        "    val1 = random.randint(-10, 10)\n",
-        "    val2 = random.randint(-10, 10)\n",
+        "    val1 = random.randint(-100, 100)\n",
+        "    val2 = random.randint(-100, 100)\n",
         "    if val2 == 0:\n",
         "      continue\n",
         "    else:\n",
@@ -278,7 +284,6 @@
         "  \n",
         "\n",
         "while True:\n",
-        "\n",
         "     # 標準入力から計算式を取得\n",
         "     print('> ', end='')\n",
         "     inStr = input()\n",
@@ -490,73 +495,96 @@
       "metadata": {
         "id": "5qGJYHiwCpxU",
         "colab_type": "code",
-        "outputId": "5975ef5b-ab6a-47c4-d850-f4117a45626a",
+        "outputId": "6e55fa6b-def2-4eb5-b489-1a61ae85701c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 234
+          "height": 401
         }
       },
       "source": [
         "from keras.models import Sequential\n",
+        "from keras.models import Model\n",
         "from keras.layers import Dense\n",
         "from keras.utils import plot_model\n",
         "from sklearn.model_selection import train_test_split\n",
         "import pandas as pd\n",
         "import sys\n",
         "import os\n",
+        "import pickle\n",
         "\n",
-        "\n",
-        "def leaning(testDataFile, init_epoch, end_epoch):\n",
+        "def leaning(testDataFile, orgModel, epoch, modelFile):\n",
         "  # test file existence\n",
         "  if os.path.isfile(testDataFile) == False:\n",
-        "    print(\"file not found\")\n",
+        "    print(\"file not found:\" + testDataFile)\n",
         "    sys.exit()\n",
         "\n",
+        "  config = orgModel.get_config()\n",
+        "  model = Sequential.from_config(config)\n",
         "  # read file and split data\n",
         "  data = pd.read_csv(testDataFile, header=0)\n",
         "  X = data.loc[:, ['ope', '1st', '2nd']]\n",
         "  Y = data.loc[:, ['ans']]\n",
         "  X_train, X_test, Y_train, Y_test = train_test_split(X, Y, train_size=0.8)\n",
         "\n",
-        "  model.fit(X_train, Y_train, initial_epoch=init_epoch, epochs=end_epoch, batch_size=64, verbose=0)\n",
+        "  model.compile(loss='mean_squared_error', optimizer='Adam', metrics=['accuracy'])\n",
+        "  model.fit(X_train, Y_train, epochs=epoch, batch_size=64, verbose=0)\n",
         "  score = model.evaluate(X_test, Y_test)\n",
         "  print(\"loss=%f, acc=%f\" % (score[0], score[1]))\n",
-        "\n",
         "  \n",
+        "  # save model\n",
+        "  with open(modelFile, mode='wb') as fp:\n",
+        "    pickle.dump(model, fp)\n",
+        "\n",
+        "    \n",
         "home_dir =  \"drive/My Drive/Colab Notebooks/\"\n",
+        "\n",
         "# construct model\n",
         "model = Sequential()\n",
         "model.add(Dense(100, activation='relu', input_dim=3))\n",
-        "model.add(Dense(100, activation='relu'))\n",
+        "model.add(Dense(1000, activation='relu'))\n",
         "model.add(Dense(100, activation='relu'))\n",
         "model.add(Dense(1, activation='linear'))\n",
-        "plot_model(model, to_file=home_dir + \"DL_Model.png\", show_shapes=True)\n",
+        "plot_model(model, to_file=home_dir + \"model/DL_Model.png\", show_shapes=True)\n",
         "model.compile(loss='mean_squared_error', optimizer='Adam', metrics=['accuracy'])\n",
         "\n",
-        "leaning(home_dir + \"addData.csv\", 0, 500)\n",
-        "leaning(home_dir + \"subData.csv\", 500, 1000)\n",
-        "leaning(home_dir + \"mulData.csv\", 1000, 2000)\n",
-        "leaning(home_dir + \"devData.csv\", 2000, 4000)\n",
-        "  \n",
-        "\n",
-        "#save model\n",
-        "import pickle\n",
-        "with open(home_dir + \"DL_model.pickle\", mode='wb') as fp:\n",
-        "  pickle.dump(model, fp)"
+        "leaning(home_dir + \"data/devData.csv\", model, 2000, home_dir + \"model/devModel.pickle\")\n",
+        "leaning(home_dir + \"data/mulData.csv\", model, 2000, home_dir + \"model/mulModel.pickle\")\n",
+        "leaning(home_dir + \"data/addData.csv\", model, 2000, home_dir + \"model/addModel.pickle\")\n",
+        "leaning(home_dir + \"data/subData.csv\", model, 2000, home_dir + \"model/subModel.pickle\")"
       ],
-      "execution_count": 37,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "200/200 [==============================] - 0s 2ms/step\n",
-            "loss=0.000228, acc=1.000000\n",
-            "200/200 [==============================] - 0s 81us/step\n",
-            "loss=0.000416, acc=1.000000\n",
-            "200/200 [==============================] - 0s 78us/step\n",
-            "loss=0.035640, acc=0.985000\n",
-            "200/200 [==============================] - 0s 99us/step\n",
-            "loss=0.004995, acc=0.295000\n"
+            "Using TensorFlow backend.\n",
+            "WARNING: Logging before flag parsing goes to stderr.\n",
+            "W0726 04:57:02.451878 139809719236480 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:74: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+            "\n",
+            "W0726 04:57:02.466619 139809719236480 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:517: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+            "\n",
+            "W0726 04:57:02.469204 139809719236480 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:4138: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
+            "\n",
+            "W0726 04:57:02.584430 139809719236480 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/optimizers.py:790: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+            "\n",
+            "W0726 04:57:02.796923 139809719236480 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:986: The name tf.assign_add is deprecated. Please use tf.compat.v1.assign_add instead.\n",
+            "\n",
+            "W0726 04:57:02.904707 139809719236480 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:973: The name tf.assign is deprecated. Please use tf.compat.v1.assign instead.\n",
+            "\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "200/200 [==============================] - 0s 275us/step\n",
+            "loss=31.024055, acc=0.115000\n",
+            "200/200 [==============================] - 0s 308us/step\n",
+            "loss=2865.266172, acc=0.000000\n",
+            "200/200 [==============================] - 0s 448us/step\n",
+            "loss=0.031020, acc=1.000000\n",
+            "200/200 [==============================] - 0s 534us/step\n",
+            "loss=0.005238, acc=1.000000\n"
           ],
           "name": "stdout"
         }
@@ -569,7 +597,13 @@
         "colab_type": "text"
       },
       "source": [
-        "deep learning の学習モデルを使って推論する"
+        "deep learning の学習モデルを使って推論する\n",
+        "\n",
+        "python での四捨五入\n",
+        "https://note.nkmk.me/python-round-decimal-quantize/\n",
+        "\n",
+        "フォーマット\n",
+        "https://www.headboost.jp/python-how-to-handle-digits/"
       ]
     },
     {
@@ -577,10 +611,10 @@
       "metadata": {
         "id": "l5ATamfzkI1y",
         "colab_type": "code",
-        "outputId": "f3403fa2-b226-409f-a8ee-d0e6affb90b7",
+        "outputId": "af8b2618-5f13-4572-e852-6eacef41c13a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 146
+          "height": 603
         }
       },
       "source": [
@@ -590,42 +624,100 @@
         "from pandas import DataFrame\n",
         "import pickle\n",
         "import numpy as np\n",
+        "from decimal import Decimal, ROUND_HALF_UP, ROUND_HALF_EVEN\n",
         "\n",
-        "filename = \"drive/My Drive/Colab Notebooks/\"\n",
-        "filename += \"DL_model\"\n",
-        "filename += \".pickle\"\n",
+        "#load models\n",
+        "home_dir = \"drive/My Drive/Colab Notebooks/model/\"\n",
         "\n",
+        "addFp = open(home_dir + \"addModel.pickle\", mode='rb')\n",
+        "addModel = pickle.load(addFp)\n",
         "\n",
-        "with open(filename, mode='rb') as fp:\n",
-        "  model = pickle.load(fp)\n",
-        "  \n",
-        "# 加算\n",
-        "ope, x, y = 1, -5, 12\n",
-        "predected_answer = model.predict(np.array([[ope, x, y]]))\n",
-        "print(\"{0} , {1}, {2} = {3}\".format(ope, x, y, int(predected_answer[0])))\n",
-        "  \n",
-        "ope, x, y = 2, -5, 12\n",
-        "predected_answer = model.predict(np.array([[ope, x, y]]))\n",
-        "print(\"{0} , {1}, {2} = {3}\".format(ope, x, y, int(predected_answer[0])))\n",
-        "  \n",
-        "  \n",
-        "ope, x, y = 3, -5, 12\n",
-        "predected_answer = model.predict(np.array([[ope, x, y]]))\n",
-        "print(\"{0} , {1}, {2} = {3}\".format(ope, x, y, int(predected_answer[0])))\n",
+        "subFp = open(home_dir + \"subModel.pickle\", mode='rb')\n",
+        "subModel = pickle.load(subFp)\n",
         "\n",
-        "ope, x, y = 4, -5, 12\n",
-        "predected_answer = model.predict(np.array([[ope, x, y]]))\n",
-        "print(\"{0} , {1}, {2} = {3}\".format(ope, x, y, int(predected_answer[0])))"
+        "mulFp = open(home_dir + \"mulModel.pickle\", mode='rb')\n",
+        "mulModel = pickle.load(mulFp)\n",
+        "\n",
+        "devFp = open(home_dir + \"devModel.pickle\", mode='rb')\n",
+        "devModel = pickle.load(devFp)\n",
+        "\n",
+        "while True:\n",
+        "  # 標準入力から計算式を取得\n",
+        "  print('> ', end='')\n",
+        "  inStr = input()\n",
+        "\n",
+        "  if inStr == 'q':\n",
+        "    print(\"exit\")\n",
+        "    break\n",
+        "\n",
+        "  ope, x, y = list(map(lambda x: int(x), inStr.split(' ')))\n",
+        "\n",
+        "  # 学習モデルを用いて回答を取得し、標準出力\n",
+        "  if ope == 1:\n",
+        "    predected_answer = addModel.predict(np.array([[ope, x, y]]))\n",
+        "    print(\"{0} + {1} = {2}\".format(x, y, int(predected_answer[0])))\n",
+        "  elif ope == 2:\n",
+        "    predected_answer = subModel.predict(np.array([[ope, x, y]]))\n",
+        "    print(\"{0} - {1} = {2}\".format(x, y, int(predected_answer[0])))\n",
+        "  elif ope == 3:\n",
+        "    predected_answer = mulModel.predict(np.array([[ope, x, y]]))\n",
+        "    print(\"{0} * {1} = {2}\".format(x, y, int(predected_answer[0])))\n",
+        "  elif ope == 4:\n",
+        "    predected_answer = devModel.predict(np.array([[ope, x, y]]))\n",
+        "    print(\"{0} / {1} = {2}\".format(x, y, int(predected_answer[0])))\n",
+        "  else:\n",
+        "    print(\"unknown operater:{0}\".format(ope))\n",
+        "\n",
+        "      \n",
+        "addFp.close()\n",
+        "subFp.close()\n",
+        "mulFp.close()\n",
+        "devFp.close()"
       ],
-      "execution_count": 38,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "1 , -5, 12 = 0\n",
-            "2 , -5, 12 = 0\n",
-            "3 , -5, 12 = 0\n",
-            "4 , -5, 12 = 0\n"
+            "Using TensorFlow backend.\n",
+            "WARNING: Logging before flag parsing goes to stderr.\n",
+            "W0726 05:30:17.670423 139927840696192 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:517: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+            "\n",
+            "W0726 05:30:17.688233 139927840696192 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:4138: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
+            "\n",
+            "W0726 05:30:17.750643 139927840696192 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:174: The name tf.get_default_session is deprecated. Please use tf.compat.v1.get_default_session instead.\n",
+            "\n",
+            "W0726 05:30:17.751746 139927840696192 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:181: The name tf.ConfigProto is deprecated. Please use tf.compat.v1.ConfigProto instead.\n",
+            "\n",
+            "W0726 05:30:17.752685 139927840696192 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:186: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
+            "\n",
+            "W0726 05:30:18.579997 139927840696192 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/optimizers.py:790: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+            "\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "> 1 2 3\n",
+            "2 + 3 = 5\n",
+            "> 1 5 5\n",
+            "5 + 5 = 10\n",
+            "> 1 10 10\n",
+            "10 + 10 = 20\n",
+            "> 1 200 10\n",
+            "200 + 10 = 210\n",
+            "> 2 300 10\n",
+            "300 - 10 = 290\n",
+            "> 2 400 20\n",
+            "400 - 20 = 380\n",
+            "> 3 10 10\n",
+            "10 * 10 = 87\n",
+            "> 3 10 200\n",
+            "10 * 200 = 1116\n",
+            "> 4 6 3\n",
+            "6 / 3 = 1\n",
+            "> "
           ],
           "name": "stdout"
         }
